Added token service, authentication and extentions

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Data source=datingapp.db" 
   },
-  
+  "TokenKey": "lsi8EdSA8Egg0fjtsQbT7GGSVmnb",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
