--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.13",
-    "@angular/cdk": "^12.2.12",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.13",
     "@angular/compiler": "~12.2.13",
     "@angular/core": "~12.2.13",
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~12.2.13",
     "@angular/platform-browser-dynamic": "~12.2.13",
     "@angular/router": "~12.2.13",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
