--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.3",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.3",
     "@angular/common": "~13.3.3",
     "@angular/compiler": "~13.3.3",
     "@angular/core": "~13.3.3",
@@ -20,17 +20,17 @@
     "@angular/platform-browser-dynamic": "~13.3.3",
     "@angular/router": "~13.3.3",
     "@kolkov/ngx-gallery": "^2.0.1",
-    "@microsoft/signalr": "^6.0.3",
-    "bootstrap": "^4.5.3",
+    "@microsoft/signalr": "^6.0.4",
+    "bootstrap": "^4.6.1",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^7.1.0",
-    "ngx-spinner": "^10.0.1",
+    "ngx-bootstrap": "^8.0.0",
+    "ngx-spinner": "^13.1.1",
     "ngx-timeago": "^2.0.0",
-    "ngx-toastr": "^14.2.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
+    "ngx-toastr": "^14.2.4",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.3.1",
     "wepback": "^1.0.0",
     "zone.js": "~0.11.4"
   },
@@ -38,11 +38,11 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.3",
-    "@types/jasmine": "^3.10.2",
+    "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^16.11.6",
+    "@types/node": "^17.0.24",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.10.1",
+    "jasmine-core": "^4.1.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.3.7",
     "karma-chrome-launcher": "~3.1.0",
@@ -50,7 +50,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.7.0",
     "tslint": "~6.1.0",
     "typescript": "~4.6.3"
   }
