--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost; Port=5432; User Id=appuser; Password=Password123; Database=convenus"
+    "DefaultConnection" : "Server=localhost; Port=5432; User Id=appuser; Password=Pa$$w0rd; Database=convenus"
   },
   "TokenKey": "lsi8EdSA8Egg0fjtsQbT7GGSVmnb",
   "Logging": {
